--- a/templates/_partials/_hcaptcha_submit_button.html.twig
+++ b/templates/_partials/_hcaptcha_submit_button.html.twig
@@ -1,1 +1,1 @@
-<button class="h-captcha btn btn-custom float-end" data-sitekey="{{hcaptcha_site_key}}" data-theme="dark" data-callback="submitFormWithHCaptchaResponse" type="submit">Envoyer</button>
+<button class="h-captcha btn btn-custom-border float-end" data-sitekey="{{hcaptcha_site_key}}" data-theme="dark" data-callback="submitFormWithHCaptchaResponse" type="submit">Envoyer</button>
