--- a/templates/contact/order.html.twig
+++ b/templates/contact/order.html.twig
@@ -22,7 +22,7 @@
 
 		<div class="row">
 			<div class="col text-center mt-3 title d-none d-md-block">
-				<div>COMMANDE -
+				<div>PRÉCOMMANDE -
 					{{ product.name }}</div>
 			</div>
 		</div>
