--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -8,47 +8,53 @@
 
 {% block body %}
 	<div class="container accueil">
-		<div class="row justify-content-center mt-4">
-			<div class="col-8 col-md-6 text-center mt-lg-3">
+		<div class="row justify-content-center align-items-center mt-4">
+			<div class="col-8 col-md-6 text-center mt-4">
 				<form method="post">
 					{% if error %}
 						<div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
 					{% endif %}
-					{# <h1 class="h3 mb-3 font-weight-normal">Connexion</h1> #}
-					<div class="m-3">
-						<label for="inputEmail">Email</label>
+					<div class="row justify-content-center mt-4">
+						<label class="mb-1" for="inputEmail">Email</label>
 					</div>
-					<input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
-					<div class="m-3">
-						<label for="inputPassword">Password</label>
-					</div>
-					<input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
+					<div class="col-12 text-start">
+						<input type="email" value="{{ last_username }}" placeholder="Email" name="email" id="inputEmail" class="form-control col-12" autocomplete="email" required autofocus>
 
+					</div>
+					<div class="row justify-content-center align-items-center mt-4">
+
+						<div class="col-10 text-start">
+							<input type="password" placeholder="Mot de passe" name="password" id="inputPassword" class="form-control col-12" autocomplete="current-password" required>
+						</div>
+						<div class="col-2">
+							<span toggle="#password-field" class="fas fa-eye-slash toggle-password icon-eye-size"></span>
+						</div>
+					</div>
 					<input
 					type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
-
 					{#Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-																																																																																																				        See https://symfony.com/doc/current/security/remember_me.html
-																																																																																																				
-																																																																																																				        <div class="checkbox mb-3">
-																																																																																																				            <label>
-																																																																																																				                <input type="checkbox" name="_remember_me"> Remember me
-																																																																																																				            </label>
-																																																																																																				        </div>
-																																																																																																				    #}
+																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																	        See https://symfony.com/doc/current/security/remember_me.html
+																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																	
+																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																	        <div class="checkbox mb-3">
+																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																	            <label>
+																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																	                <input type="checkbox" name="_remember_me"> Remember me
+																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																	            </label>
+																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																	        </div>
+																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																	    #}
 
-					<div class="mt-3">
-						<button class="btn btn-lg btn-custom" type="submit">
-							Me connecter
-						</button>
+					<div class="row justify-content-center mt-4">
+						<div class="col-10 m-3 text-center">
+							<button class="btn btn-lg btn-custom-border" type="submit">
+								Me connecter
+							</button>
+						</div>
 					</div>
 				</form>
 			</div>
-		</div>
-		<div class="row d-flex justify-content-center logoLogin">
-			<div class="col-3 col-md-2 col-lg-2 mt-3">
-				<img class="card-img" src="./img/JUL.png" alt="sign logo">
+			<div class="row d-flex justify-content-center logoLogin">
+				<div class="col-3 col-md-2 col-lg-2 mt-3">
+					<img class="card-img" src="./img/JUL.png" alt="sign logo">
+				</div>
 			</div>
 		</div>
-	</div>
-{% endblock %}
+	{% endblock %}
