login_register_custom.js_update_1

--- a/templates/creations/selection.html.twig
+++ b/templates/creations/selection.html.twig
@@ -63,7 +63,7 @@
 						<button class="btn btn-custom-border">Acheter</button>
 					</a>
 				{% else %}
-					<a href="{{ path('creations_selection', {'slug':product.slug} )}}">
+					<a href="{{ path('creations', {'slug':product.slug} )}}">
 						<button class="btn btn-custom-border">Acheter</button>
 					</a>
 				{% endif %}
