--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -15,30 +15,28 @@
 		<div class="row justify-content-center align-items-center mt-4">
 			<div class="col-8 col-md-6 text-center mt-4">
 
-				{{ form_start(registrationForm) }}
+				{{ form_start(registrationForm,{'attr': {'id': 'registration_form'}}) }}
 				{{ form_errors(registrationForm) }}
 
 				<div class="row justify-content-center mt-4">
 					<div class="col-12">
 						<div>{{ form_widget(registrationForm.email) }}</div>
-						<div>{{ form_errors(registrationForm.email) }}</div>
+						<div id="#errorMail">{{ form_errors(registrationForm.email) }}</div>
 					</div>
 				</div>
 				<div class="row justify-content-center mt-4">
 					<div class="col-10">
-						{{ form_widget(registrationForm.plainPassword, {label: 'Password'}) }}
-						{{ form_errors(registrationForm.plainPassword, {label: 'Password'}) }}
+						<div>{{ form_widget(registrationForm.plainPassword, {label: 'Password'}) }}</div>
+						<span toggle="#password-field" class="fas fa-eye-slash field-icon toggle-password-register icon-eye-size"></span>
+						<div id="#errorPassword">{{ form_errors(registrationForm.plainPassword, {label: 'Password'}) }}
+						</div>
 					</div>
-					<div class="col-2">
-						<span toggle="#password-field" class="fas fa-eye-slash toggle-password-register icon-eye-size"></span>
-					</div>
+					{# <div class="col-2"></div> #}
 				</div>
 				<div class="row d-flex justify-content-center">
 					<div class="col-12 col-md-8 col-lg-4 mt-3">
-						{{ form_widget(registrationForm.agreeTerms) }}
-						{{ form_errors(registrationForm.agreeTerms) }}
-
-
+						<div>{{ form_widget(registrationForm.agreeTerms) }}</div>
+						<div>{{ form_errors(registrationForm.agreeTerms) }}</div>
 					</div>
 				</div>
 				<div class="row justify-content-center mt-4">
@@ -49,7 +47,7 @@
 				</div>
 				<div class="row justify-content-center mt-4">
 					<div class="col-10">
-						<a href="{{ path('loginproduct')}}">Déjà membre ? Connectez-vous !</a>
+						<a href="{{ path('login')}}">Déjà membre ? Connectez-vous !</a>
 					</div>
 				</div>
 			</div>
