--- a/templates/admin/show.html.twig
+++ b/templates/admin/show.html.twig
@@ -8,7 +8,7 @@
 
 {% block body %}
 	<div class="container accueil">
-		<div class="row">
+		<div class="row mt-4">
 			<div class="col text-center mt-3 title">
 				<div>
 					{{ product.name }}</div>
