--- a/templates/admin/update.html.twig
+++ b/templates/admin/update.html.twig
@@ -7,9 +7,9 @@
 
 {% block body %}
 	<div class="container accueil">
-		<div class="row">
+		<div class="row mt-4">
 			<div class="col-12 text-center mt-3 title">
-				<div>Modification de
+				<div>Modification
 					{{product.name}}</div>
 			</div>
 		</div>
@@ -83,7 +83,7 @@
 						</div>
 
 						<div class="col-12 mt-1 form-group">
-							<button class="btn btn-custom float-end" type="submit">Modifier</button>
+							<button class="btn btn-custom-border float-end" type="submit">Modifier</button>
 						</div>
 					</div>
 					{{ form_rest(form) }}
