--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -8,7 +8,7 @@
 
 {% block body %}
 	<div class="container accueil" id="scroll">
-		<div class="row mt-4">
+		<div class="row">
 			<div class="col-12 text-center mt-3 title d-md-none">
 				<div class="text-warning">ADMIN</div>
 			</div>
@@ -17,7 +17,7 @@
 			<div class="col-12 text-center mt-3 mt-md-5">
 				<div>
 					<a href="{{ path('admin_create')}}">
-						<button class="btn btn-custom">
+						<button class="btn btn-custom-border">
 							<i class="fas fa-plus"></i>
 							<b>Ajouter une création</b>
 						</button>
@@ -25,9 +25,21 @@
 				</div>
 			</div>
 		</div>
-		<div class="row align-items-center justify-content-center mt-5 px-3">
+		<div class="row">
+			<div class="col-12 text-center mt-2">
+				<div>
+					{{ products|length > 1 ? 'Produits :' : 'Produit :' }}
+					{{ products|length }}
+				</div>
+				<div>
+					{{ activeProducts|length > 1 ? 'Produits actifs :' : 'Produit actif :' }}
+					{{ activeProducts|length }}
+				</div>
+			</div>
+		</div>
+		<div class="row align-items-streched justify-content-center mt-2 px-3">
 			{% for product in products %}
-				<div id="product-{{ product.name|e }}" class="col-12 col-md-3 text-center m-3 {% if product.isActive|e %} border border-success {% else %} border border-danger{% endif %} cardAnim">
+				<div id="product-{{ product.name|e }}" class="col-12 col-md-3 text-center m-3 rounded {% if product.isActive|e %} border border-success border-4 {% else %} border border-danger border-4{% endif %} cardAnim">
 					<a href="{{ path('admin_show' , {'slug':product.slug|e} ) }}">
 						<div class="card mb-3">
 							<h3 class="card-header">{{ product.name|e }}</h3>
@@ -39,7 +51,7 @@
 								{% endif %}
 								<h6 class="card-subtitle text-muted pt-3">{{ product.price|e }}€</h6>
 							</div>
-							<img class="card-img" src="/img/uploads/{{ product.img|e }}" alt="image {{ product.name|e }}">
+							<img class="card-img img-admin-card" src="/img/uploads/{{ product.img|e }}" alt="image {{ product.name|e }}">
 							<div class="card-body">
 								<p class="card-text">
 									{% if product.description|e|length > 50 %}
@@ -50,16 +62,13 @@
 								</p>
 							</div>
 							<ul class="list-group list-group-flush">
-								<li class="list-group-item {{ product.quantity|e > 0  ? 'text-white bg-transparent border border-white' : 'bg-transparent border border-danger' }} ">
-									<b>Quantité disponible
-										{{ product.quantity|e }}</b>
+								<li class="list-group-item rounded {{ product.quantity|e > 0  ? 'text-white bg-transparent border border-white border-3' : 'bg-transparent border border-danger border-3' }} ">
+									Quantité disponible
+									<b>{{ product.quantity|e }}</b>
 								</li>
 								{% if product.highlighted|e %}
-									<li class="list-group-item bg-success mt-1">
-										<b>Produit mis en avant sur la page d'accueil (
-											<span class="text-light">{{ product.highlighted|e }}</span>
-											)
-										</b>
+									<li class="list-group-item bg-success mt-1 rounded text-light">Produit mis en avant sur la page d'accueil
+										<b>{{ product.highlighted|e }}</b>
 									</li>
 									{% else %}
 								{% endif %}
