--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -13,19 +13,19 @@
 			<div class="col text-center mt-5 title">INSCRIPTION</div>
 		</div>
 		<div class="row justify-content-center align-items-center mt-4">
-			<div class="col-8 col-md-6 text-center mt-4">
+			<div class="col-8 col-md-8 text-center mt-4">
 
 				{{ form_start(registrationForm,{'attr': {'id': 'registration_form'}}) }}
 				{{ form_errors(registrationForm) }}
 
 				<div class="row justify-content-center mt-4">
-					<div class="col-12">
+					<div class="col-10 col-md-8 col-lg-6 text-start">
 						<div>{{ form_widget(registrationForm.email) }}</div>
 						<div id="#errorMail">{{ form_errors(registrationForm.email) }}</div>
 					</div>
 				</div>
 				<div class="row justify-content-center mt-4">
-					<div class="col-10">
+					<div class="col-10 col-md-8 col-lg-6 text-start">
 						<div>{{ form_widget(registrationForm.plainPassword, {label: 'Password'}) }}</div>
 						<span toggle="#password-field" class="fas fa-eye-slash field-icon toggle-password-register icon-eye-size"></span>
 						<div id="#errorPassword">{{ form_errors(registrationForm.plainPassword, {label: 'Password'}) }}
@@ -34,19 +34,19 @@
 					{# <div class="col-2"></div> #}
 				</div>
 				<div class="row d-flex justify-content-center">
-					<div class="col-12 col-md-8 col-lg-4 mt-3">
+					<div class="col-12 col-md-8 col-lg-6 mt-3">
 						<div>{{ form_widget(registrationForm.agreeTerms) }}</div>
 						<div>{{ form_errors(registrationForm.agreeTerms) }}</div>
 					</div>
 				</div>
 				<div class="row justify-content-center mt-4">
-					<div class="col-10">
+					<div class="col-10 col-md-8 col-lg-6 m-3 text-center">
 						<button type="submit" class="btn btn-lg btn-custom-border">M'inscrire</button>
 						{{ form_end(registrationForm) }}
 					</div>
 				</div>
 				<div class="row justify-content-center mt-4">
-					<div class="col-10">
+					<div class="col-12 text-center">
 						<a href="{{ path('login')}}">Déjà membre ? Connectez-vous !</a>
 					</div>
 				</div>
