--- a/public/css/style.css
+++ b/public/css/style.css
@@ -209,11 +209,23 @@ cursor: pointer;
   transform: scale(1.05);
 }
 
-/* .alert-success-flash {
-  background-color: hsla(152, 70%, 51%, 0.970)!important;
-  border: 1px solid black!important;
-  color:black!important
-} */
+.flash-alert-success {
+  background-color: hsla(152, 70%, 51%, 0.9);
+  border: 1px solid black;
+  color:black;
+}
+
+.flash-alert-danger {
+  background-color: hsla(354, 70%, 54%, 0.9);
+  border: 1px solid black;
+  color:black;
+}
+
+.flash-alert-warning {
+  background-color: hsla(54, 100%, 62%, 0.9);
+  border: 1px solid black;
+  color:black;
+}
 
 
 
