--- a/templates/admin/delete.html.twig
+++ b/templates/admin/delete.html.twig
@@ -31,7 +31,7 @@
 
 		<div class="row">
 			<div class="col text-center mt-3">
-				<div>{{ product.description }}
+				<div>{{ product.description|nl2br }}
 				</div>
 			</div>
 		</div>
