--- a/templates/creations/show.html.twig
+++ b/templates/creations/show.html.twig
@@ -30,7 +30,7 @@
 
 		<div class="row justify-content-center">
 			<div class="col-md-10 text-center mt-3">
-				<div>{{ product.description }}
+				<div>{{ product.description|nl2br }}
 				</div>
 			</div>
 		</div>
@@ -63,7 +63,7 @@
 						<button class="btn btn-custom-border">Acheter</button>
 					</a>
 				{% else %}
-					<a href="{{ path('creations_selection', {'slug':product.slug} )}}">
+					<a href="{{ path('user_creations_show', {'slug':product.slug} )}}">
 						<button class="btn btn-custom-border">Acheter</button>
 					</a>
 				{% endif %}
