--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -33,6 +33,7 @@
 					<input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
 					<div class="row justify-content-center mt-4">
 						<div class="col-10 col-md-8 col-lg-6 m-3 text-center">
+							<input type="hidden" name="_target_path" value="{{ path('login') }}"/>
 							<button class="btn btn-lg btn-custom-border" type="submit">
 								Me connecter
 							</button>
