--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -30,7 +30,7 @@
 
 		<div class="row justify-content-center">
 			<div class="col-md-10 text-center mt-3">
-				<div>{{ product.description }}
+				<div>{{ product.description|nl2br }}
 				</div>
 			</div>
 		</div>
