--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,6 +6,8 @@
   border: 1px solid yellow!important;
 } */
 
+* { box-sizing: border-box; }
+
 /* Change autocomplete styles in WebKit */
 input:-webkit-autofill,
 input:-webkit-autofill:hover, 
@@ -22,11 +24,15 @@ select:-webkit-autofill:focus {
   transition: background-color 5000s ease-in-out 0s;
 }
 
+
+
 body {
   color: #ffffff;
   font-size: 12px;
   background-color: black;
 }
+
+
 input:focus {
   outline: none;
 }
