--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -18,8 +18,8 @@
 
 				</div>
 
-				<div class="row justify-content-center">
-					{{ dump(app.user.getRoles) }}
+				<div
+					class="row justify-content-center">{# {{ dump(app.user.getRoles) }} #}
 
 				</div>
 
