user_ order_upd

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -233,6 +233,14 @@ cursor: pointer;
   color:black;
 }
 
+.table-row{
+  cursor:pointer;
+  }
+ 
+  .tableHover:hover {
+    background-color:  #6c757d!important;
+  }
+
 
 
 /* form-control {
