admin_orders admin_order_upd

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -238,7 +238,7 @@ cursor: pointer;
   }
  
   .tableHover:hover {
-    background-color:  #6c757d!important;
+    background-color:  #6c757d6c!important;
   }
 
 
