--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -7,29 +7,36 @@
 {% endblock %}
 
 {% block body %}
-{% if app.user %}
-	<div class="container accueil">
-		<div class="row justify-content-center">
-			<div class="col-12 text-center mt-3 title">
-				{{ app.user.email }}
+	{% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
+		<div class="container accueil">
+			<div class="row">
+				<div class="col text-center mt-3 title d-md-none">
+					<div>COMPTE</div>
+				</div>
 			</div>
 			<div class="row justify-content-center">
 				<div class="col-12 text-center mt-3">
-					<table class="table text-white">
-						{% if stripeOrders %}
+					{{ app.user.email }}
+				</div>
+				<div class="col-12 text-center mt-3 title">
+					<div>COMMANDES</div>
+				</div>
+				<div class="col-12 text-center mt-3">
+					{% if stripeOrders %}
+						<table class="table text-white">
 							<thead>
 								<tr>
-									<th scope="col">#</th>
+									<th scope="col">&nbsp;N °&nbsp;</th>
 									<th scope="col">Création</th>
 									<th scope="col">Date</th>
 									<th scope="col">Prix</th>
-									<th scope="col">Envoyé</th>
+									<th scope="col">Envoyée</th>
 								</tr>
 							</thead>
 							<tbody>
 								{% for stripeOrder in stripeOrders %}
 									{% if stripeOrder.getIsSent == false %}
-										<tr class='table-row tableHover' data-href='{{ path('user_order' , {'reference':stripeOrder.reference} ) }}' data-toggle="tooltip" data-placement="bottom" title="Modifier l'adresse de livraison commande #{{ loop.index }}">
+										<tr class='table-row tableHover' data-href='{{ path('user_order' , {'reference':stripeOrder.reference} ) }}' data-toggle="tooltip" data-placement="bottom" title="Modifier l'adresse de livraison commande N°{{ loop.index }}">
 											<th scope="row">{{ loop.index }}</th>
 											<td>{{stripeOrder.product}}</td>
 											<td>{{stripeOrder.getCreatedAt|date('d-m-Y')}}</td>
@@ -53,10 +60,18 @@
 							{% endif %}
 						{% endfor %}
 					</tbody>
-				</tbody>
-			</tr>
-		</tbody>
-	</table>
-{% else %}
-	<div class="border border-white p-4">Vous n'avez pas encore commandé de création.</div>
-{% endif %}</div></div><div class="row justify-content-center"></div><div class="row justify-content-center"><div class="col-12 text-center mt-3"></div></div>{% endif %}<div class="row d-flex justify-content-center logoSpec"><div class="col-3 col-md-2 col-lg-2 mt-3"><img class="card-img" src="/img/JUL.png" alt="sign logo"></div></div></div>{% endblock %}{% block javascripts %}{{ parent() }}{% endblock %}
+				</table>
+			</div>
+		{% else %}
+			<div class="border border-white p-4">Vous n'avez pas encore commandé de création.</div>
+		{% endif %}
+		<div class="row d-flex justify-content-center logoSpec">
+			<div class="col-3 col-md-2 col-lg-2 mt-3">
+				<img class="card-img" src="/img/JUL.png" alt="sign logo">
+			</div>
+		</div>
+	{% endif %}
+{% endblock %}
+{% block javascripts %}
+	{{ parent() }}
+{% endblock %}
